# libspotify-rs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  session_config.rs
src/playlist/: callbacks.rs  mod.rs
src/session/: callbacks.rs  config.rs  error.rs  mod.rs
